FIX plugins table does not fit
max-width is not needed here, the table doesnt stretch when used on an ultrawide screen

--- a/website/src/pages/styles.module.scss
+++ b/website/src/pages/styles.module.scss
@@ -54,7 +54,6 @@
   display: flex;
   justify-content: center;
   margin: 3rem auto;
-  max-width: 1200px;
   overflow-x: auto;
 
   table {
